--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
 	<h1>GAP</h1>
 	<h2>Live Assist</h2>
 	<p>Welcome Customer, We've now made it easy for you to reach out to our GAP Assist Specialist who will be able to help you for any queries. Please NOTE : Below will be a button that will be disabled if nobody is logged into the chat console.  If it's enabled the button will be clickable</p>
-<p>Thank you & Have a Great Day ahead !</p>
+<p>Thank you and Have a Great Day ahead !</p>
 </div>
 <div>
 	<a id="liveagent_button_online_{{CHAT_KEY_BUTTON}}" href="javascript://Chat" style="display: none;" class="btn btn-primary" onclick="liveagent.startChat('{{CHAT_KEY_BUTTON}}')">Online</a>
