--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,9 @@
 <div class="jumbotron">
 	<h1>GAP</h1>
 	<h2>Live Assist</h2>
-	<p>Welcome Customer, We've now made it easy for you to reach out to our GAP Assist Specialist who will be able to help you for any queries. Please NOTE : Below will be a button that will be disabled if nobody is logged into the chat console.  If it's enabled the button will be clickable</p>
+	<p>Welcome Customer, We've now made it easy for you to reach out to our GAP Assist Specialist who will be able to help you for any queries.</p>
+	<p>Please NOTE : Below will be a button that will be disabled if nobody is logged into the chat console.  If it's enabled the button will be clickable</p>
+	</br>
 <p>Thank you and Have a Great Day ahead !</p>
 </div>
 <div>
