--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,8 @@
 </script>
 
 <div class="jumbotron">
-	<h1>GAP</h1>
-	<h2>Live Assist</h2>
+ <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Gap_logo.svg/150px-Gap_logo.svg.png" alt="HTML5 Icon" style="width:128px;height:128px;"> 
+	<h2>Live Assistant</h2>
 	<p>Welcome Customer, We've now made it easy for you to reach out to our GAP Assist Specialist who will be able to help you for any queries.</p>
 	<p>Please NOTE : Below will be a button that will be disabled if nobody is logged into the chat console.  If it's enabled the button will be clickable</p>
 	</br>
