--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,10 @@
 <div class="jumbotron">
  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Gap_logo.svg/150px-Gap_logo.svg.png" alt="HTML5 Icon" style="width:128px;height:128px;"> 
 	<h2>Live Assistant</h2>
-	<p>Welcome Customer, We've now made it easy for you to reach out to our GAP Assist Specialist who will be able to help you for any queries.</p>
-	<p>Please NOTE : Below will be a button that will be disabled if nobody is logged into the chat console.  If it's enabled the button will be clickable</p>
+	<p>Dear Customer <p>
+	<p>You can now chat online with a Customer Care Representative to get real-time answers to your questions.</p>
+	<p>Please NOTE : Only When our agents are unavailable, the button below would show as “Offline".</p>
+	<p>Few more clicks ahead and you're all set...<p> 
 	</br>
 <p>Thank you and Have a Great Day ahead !</p>
 </div>
