--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,11 +7,10 @@
  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Gap_logo.svg/150px-Gap_logo.svg.png" alt="HTML5 Icon" style="width:128px;height:128px;"> 
 	<h2>Live Assistant</h2>
 	<p>Dear Customer <p>
-	<p>You can now chat online with a Customer Care Representative to get real-time answers to your questions.</p>
-	<p>Please NOTE : Only When our agents are unavailable, the button below would show as “Offline".</p>
-	<p>Few more clicks ahead and you're all set...<p> 
+	<p>You can now chat online with our GapHelp executives to get real-time answers to your questions.</p>
+	<p>Please NOTE : Only when our GapHelp executives are unavailable, the button below would show as “Offline".</p>
 	</br>
-<p>Thank you and Have a Great Day ahead !</p>
+<p>Thank you for your patience, Few more clicks ahead and you're all set...</p>
 </div>
 <div>
 	<a id="liveagent_button_online_{{CHAT_KEY_BUTTON}}" href="javascript://Chat" style="display: none;" class="btn btn-primary" onclick="liveagent.startChat('{{CHAT_KEY_BUTTON}}')">Online</a>
